[gd_scene load_steps=15 format=3 uid="uid://vr_locomotion_test"]

[ext_resource type="Script" path="res://scenes/features/vr_locomotion_test.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://cqh724k6gf2on" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_hand_low.tscn" id="2_left_hand"]
[ext_resource type="PackedScene" uid="uid://l2n5gpew2uwy" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_hand_low.tscn" id="3_right_hand"]

[sub_resource type="BoxMesh" id="BoxMesh_cube"]
size = Vector3(1, 1, 1)

[sub_resource type="StandardMaterial3D" id="Material_red"]
albedo_color = Color(1, 0, 0, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 2.0

[sub_resource type="BoxMesh" id="BoxMesh_floor"]
size = Vector3(20, 0.2, 20)

[sub_resource type="StandardMaterial3D" id="Material_floor"]
albedo_color = Color(0.4, 0.4, 0.4, 1)

[sub_resource type="BoxMesh" id="BoxMesh_grabbable"]
size = Vector3(0.3, 0.3, 0.3)

[sub_resource type="StandardMaterial3D" id="Material_grabbable"]
albedo_color = Color(0, 1, 0, 1)
emission_enabled = true
emission = Color(0, 1, 0, 1)
emission_energy_multiplier = 1.5

[sub_resource type="BoxShape3D" id="BoxShape3D_grabbable"]
size = Vector3(0.3, 0.3, 0.3)

[sub_resource type="CylinderMesh" id="CylinderMesh_pillar"]
top_radius = 0.1
bottom_radius = 0.1
height = 3.0

[sub_resource type="StandardMaterial3D" id="Material_pillar"]
albedo_color = Color(0.2, 0.2, 0.8, 1)

[sub_resource type="Environment" id="Environment_bright"]
background_mode = 1
background_color = Color(0.5, 0.7, 1.0, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 2.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_player"]
radius = 0.3
height = 1.8

[node name="VRLocomotionTest" type="Node3D"]
script = ExtResource("1_script")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_bright")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 0)
light_energy = 3.0
shadow_enabled = true

[node name="ReferenceCube" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, -2)
mesh = SubResource("BoxMesh_cube")
surface_material_override/0 = SubResource("Material_red")

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_floor")
surface_material_override/0 = SubResource("Material_floor")

[node name="GrabbableCube" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1.5, -1.5)
gravity_scale = 0.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="GrabbableCube"]
mesh = SubResource("BoxMesh_grabbable")
surface_material_override/0 = SubResource("Material_grabbable")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GrabbableCube"]
shape = SubResource("BoxShape3D_grabbable")

[node name="Pillar1" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1.5, -3)
mesh = SubResource("CylinderMesh_pillar")
surface_material_override/0 = SubResource("Material_pillar")

[node name="Pillar2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1.5, -3)
mesh = SubResource("CylinderMesh_pillar")
surface_material_override/0 = SubResource("Material_pillar")

[node name="Pillar3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1.5, 3)
mesh = SubResource("CylinderMesh_pillar")
surface_material_override/0 = SubResource("Material_pillar")

[node name="Pillar4" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1.5, 3)
mesh = SubResource("CylinderMesh_pillar")
surface_material_override/0 = SubResource("Material_pillar")

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="LeftController" type="XRController3D" parent="XROrigin3D"]
tracker = &"left_hand"
pose = &"aim"

[node name="LeftHand" parent="XROrigin3D/LeftController" instance=ExtResource("2_left_hand")]

[node name="RightController" type="XRController3D" parent="XROrigin3D"]
tracker = &"right_hand"
pose = &"aim"

[node name="RightHand" parent="XROrigin3D/RightController" instance=ExtResource("3_right_hand")]
